Avoid FOIT (Flash Of Invisible Text).

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -438,6 +438,7 @@ body td {
     font-style: normal;
     font-family: "Meslo LG";
     src: local("Meslo LG S"), url("./MesloLGS-Regular.ttf") format("truetype");
+    font-display: swap;
 }
 *,
 *:before,
